# cpp-travis-boilerplate

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  travis_docker_build.sh
include/: mylib.hpp
src/: mylib.cpp  mylib_test.cpp
